# pc-simulation-agent

./: .gitignore  CLAUDE.md  README.md  batch_run.py  cold_start.py  daily_prompts.py  daily_sim.py  personas_subset_1k.jsonl  pipeline.py  prompts.py  pyproject.toml  sampled_100_gdpval_personas.jsonl  spec.md
.claude/: settings.local.json
.claude/skills/image-editing/: SKILL.md
.claude/skills/image-generation/: SKILL.md
claude-code-sdk-examples/claude-agent-code/: MEMORY.md  README.md  agent.py  pyproject.toml  word_agent.py
claude-code-sdk-examples/claude-agent-llmapi/: MEMORY.md  README.md  agent.py  pyproject.toml  word_agent.py
claude-code-sdk-examples/claude-agent-llmapi/tests/: test_transport.py
claude-code-sdk-examples/claude-agent-llmapi/transport/: server.py
