[project]
name = "claude-agent-llmapi"
version = "0.1.0"
description = "Localhost proxy bridging Claude Agent SDK to internal LLM API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask",
    "requests",
    "msal",
    "pymsalruntime>=0.20.2",
    "anthropic>=0.84.0",
    "claude-agent-sdk>=0.1.44",
    "python-docx>=1.2.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
